--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,12 @@
 #score-disp {
     margin-bottom: 10px;
 }
+
+.message {
+    margin-top: 10px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    background-color: rgb(255, 0, 0, 0.1);
+    padding: 10px;
+    display: inline-block;
+}
