--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
 body {
     background-color: rgb(32, 32, 32);
     color: rgb(216, 216, 216);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#title {
+    font-size: 60px;
+    font-weight: bold;
+    margin-bottom: 10px;
+
 }
 
 #dice-area {
@@ -26,7 +34,6 @@ body {
     border: 2px solid rgb(75, 75, 75);
     border-radius: 5px;
     display: inline-block;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 50px;
     user-select: none;
 }
@@ -97,4 +104,15 @@ body {
 
 #shut-btn:disabled {
     background-color: rgb(146, 146, 146);
+}
+
+#restart-btn {
+    font-size: 20px;
+    margin-bottom: 20px;
+    background-color: rgb(100, 100, 100);
+    color: white;
+}
+
+#restart-btn:hover {
+    background-color: rgb(53, 53, 53, 0.5);
 }
