--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
     font-size: 60px;
     font-weight: bold;
     margin-bottom: 10px;
-
 }
 
 #dice-area {
@@ -26,6 +25,9 @@ body {
     display: inline-block;
     background-color: white;
     color: black;
+    text-align: center;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 .tile {
